<resources>
    <string name="app_name">useful things</string>
    <string name="Button_calculator">Calculator</string>
    <string name="buttonHexDec">numeral system</string>
    <string name="Button_calcFormula">calculation by formulas</string>
    <string name="VvodNextNumSys">Enter the number</string>
    <string name="Button_vvodtxtNumSys">Count</string>
    <string name="popupmenufrstitem">Just conversion</string>
    <string name="popupmenuscnditem">Convension and count</string>
    <string name="decimal">Decimal</string>
    <string name="Octal">Octal</string>
    <string name="Hexadecimal">Hexadecimal</string>
    <string name="whatnumsysis">Select an introductory number system:</string>
    <string name="Binary">Binary</string>
    <string name="Number">number</string>
    <string name="Equal">equal</string>
    <string name="in_the_binary_system">in the binary system</string>
    <string name="in_the_octal_system">in the octal system</string>
    <string name="in_the_hexadecimal_system">in the hexadecimal system</string>
    <string name="in_the_decimal_system">in the decimal system</string>
    <string name="delonechar">backspace</string>
    <string name="del">Delete</string>
    <string name="errnumsys">it is not possible to translate this number system</string>
    <string name="CalcNumSys">calculation of number systems</string>
    <string name="VvodCalcNumSys1">Enter the first number</string>
    <string name="VvodCalcNumSys2">Enter the second number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">by Spiridonov prod.</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calc">Calculator</string>
    <string name="menu_phformula">Physical formulas</string>
    <string name="menu_mathformula">Math formulas</string>
    <string name="menu_numsyscalc">Calculation of number systems</string>
    <string name="menu_numsysconv">Just conversion</string>
    <string name="divonzero">You can\'t div on zero</string>
    <string name="errenumsyscalc">please check that all data is entered correctly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="AboutApp">About</string>
    <string name="Other">Other</string>
    <string name="AboutText">The app was created to help students, as well as anyone who needs such an app. If you like this app, you can always support the developer and share this app. Thanks!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="mult_formulas">abbreviated multiplication formulas</string>
    <string name="Quadratic_equation">Quadratic equation</string>
    <string name="Trigonometry">Trigonometry</string>
    <string name="Progressions">Progressions</string>
    <string name="Triangles">Triangles</string>
    <string name="Areaofshapes">Area of shapes</string>
    <string name="square_sum">The square of the sum</string>
    <string name="Squared_difference">Squared difference</string>
    <string name="Difference_squares">Difference of squares</string>
    <string name="share">share</string>
    <string name="count">count</string>
    <string name="answer">answer</string>
    <string name="cube_sum">the cube of the sum</string>
    <string name="cube_difference">cube of a difference</string>
    <string name="sum_cubes">sum of cubes</string>
    <string name="discriminant">discriminant</string>
    <string name="root">root</string>
    <string name="root_square_equa">root of the square equation</string>
    <string name="no_root">no roots</string>
    <string name="backfeed">feedback</string>
    <string name="txt_copy">Text Copied</string>
    <string name="press_copy_txt">click to copy the text</string>
    <string name="txt_backfeed">you can leave a review at the link</string>
    <string name="bio_code">genetic code</string>
    <string name="biology">Biology</string>
    <string name="bio_task">solving tasks in biology based on the genetic code. You should enter the upper meaning chain 5-3 in the format XXX-XXX-XXX-XXX-XXX, as well as the number of the triplet from the 5 end</string>
    <string name="up_chain">upper chain</string>
    <string name="triplet">triplet</string>
    <string name="txt_home">You are in the Useful things app. Here you can find a lot of cool and useful sections that will help you in your studies. Currently available:

        mathematical calculator

        translation to different number systems.  (Enter the number first, then the system)

        calculator of different number systems. (First enter the numbers, then their number systems, after the operation sign)

        calculation of some formulas in mathematics

        solving the task of biology on the genetic code.

        The dev team will be pleased if you share this app with all your friends and leave a review on google play) Thanks!</string>
    <string name="mess_share">Have you seen the new study app yet?</string>
    <string name="nav_convertor">Convertor</string>
    <string name="lenght">lenght</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="millimeter">millimeter</string>
    <string name="centimeter">centimeter</string>
    <string name="decimeter">decimeter</string>
    <string name="meter">meter</string>
    <string name="kilometer">kilometer</string>
    <string name="inch">inch</string>
    <string name="mile">mile</string>
    <string name="kilogram">kilogram</string>
    <string name="gram">gram</string>
    <string name="ounce">ounce</string>
    <string name="ton">ton</string>
    <string name="lbs">lbs</string>
    <string name="weight">weight</string>
    <string name="speed">speed</string>
    <string name="metersecond">meter/second</string>
    <string name="meterminute">meter/minute</string>
    <string name="kilometerhour">kilometer/hour</string>
    <string name="footsecond">foot/second</string>
    <string name="footminute">foot/minute</string>
    <string name="foothour">foot/hour</string>
    <string name="milehour">mile/hour</string>
    <string name="knots">knots</string>
    <string name="bit">bit</string>
    <string name="bytee">byte</string>
    <string name="kilobit">kilobit</string>
    <string name="megabit">megabit</string>
    <string name="gigabit">gigabit</string>
    <string name="kilobyte">kilobyte</string>
    <string name="megabyte">megabyte</string>
    <string name="gigabyte">gigabyte</string>
    <string name="terabyte">terabyte</string>
    <string name="petabyte">petabyte</string>
    <string name="amount_info">amount of information</string>
</resources>
