<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/calculator"
            android:title="@string/Button_calculator" />
    </group>


    <group android:checkableBehavior="single">
        <item android:title="@string/menu_numsyscalc">
        <menu>
            <item
                android:id="@+id/nav_NumSysConv"
                android:icon="@drawable/ic_action_name"
                android:title="@string/popupmenufrstitem" />
            <item
                android:id="@+id/nav_NumSysCalc"
                android:icon="@drawable/numsyscalc"
                android:title="@string/popupmenuscnditem" />
        </menu>
    </item>
</group>


    <group android:checkableBehavior="single">
        <item android:title="@string/Button_calcFormula" >
            <menu>
                <item
                    android:id="@+id/nav_mathformula"
                    android:icon="@drawable/formula"
                    android:title="@string/menu_mathformula" />
                <item
                    android:id="@+id/nav_phformula"
                    android:icon="@drawable/formula"
                    android:title="@string/menu_phformula" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/Other">
            <menu>
                <item
                    android:id="@+id/nav_aboutApp"
                    android:icon="@drawable/aboutapp"
                    android:title="@string/AboutApp" />

            </menu>
        </item>
    </group>


</menu>
