<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actbiology"
    tools:context=".BiologyFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="true"
                android:text="@string/bio_task"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_shain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:ems="10"
                android:hint="@string/up_chain"
                android:inputType="textCapCharacters" />

            <EditText
                android:id="@+id/txt_triplet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:ems="10"
                android:hint="@string/triplet"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_rachet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/count" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtrachet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>