<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actnumsyscalc"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/vvodtxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/VvodCalcNumSys1"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorvvodTextNumSys"
                    android:textSize="15sp"
                    android:textStyle="normal|bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatnumsysis"

                    android:textColor="@color/colorvvodTextNumSys"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radiogroup1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rbbinary1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Binary"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/rboctal1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Octal"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/rbdecimal1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decimal"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/rbhex1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hexadecimal"
                        android:textSize="10sp" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radiogroup3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="65dp">

                <RadioButton
                    android:id="@+id/btnplus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="10sp" />

                <RadioButton
                    android:id="@+id/btnminus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="10sp" />

                <RadioButton
                    android:id="@+id/btndiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textSize="10sp" />

                <RadioButton
                    android:id="@+id/btnmulti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textSize="10sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/vvodtxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/VvodCalcNumSys2"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorvvodTextNumSys"
                    android:textSize="15sp"
                    android:textStyle="normal|bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatnumsysis"
                    android:textColor="@color/colorvvodTextNumSys"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radiogroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rbbinary2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Binary"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/rboctal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Octal"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/rbdecimal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decimal"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/rbhex2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hexadecimal"
                        android:textSize="10sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/txt0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>